--- a/0x0B-python-input_output/.gitignore
+++ b/0x0B-python-input_output/.gitignore
@@ -2,6 +2,9 @@ my_file_0.txt
 my_first_file.txt
 file_append.txt
 my_fake.json
+my_list.json
+my_dict.json
+my_set.json
 [0-9]-main.py
 8-main_2.py
 8-my_class.py
